[gd_scene load_steps=47 format=3 uid="uid://cxqykb82x7b5d"]

[ext_resource type="Script" uid="uid://cvey1tmljnqih" path="res://Scripts/player.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://14ya5woi21ah" path="res://Assets/Sprites/PlayerSprite.png" id="2_52ee3"]
[ext_resource type="AudioStream" uid="uid://dmoykrnncoeb3" path="res://Assets/Sound Design/SFX/DamageSFX/PlayerHitSFX.wav" id="3_6t5aa"]
[ext_resource type="PackedScene" uid="uid://dem6ixaredkh6" path="res://Scenes/UI Scenes/heart.tscn" id="4_vgqql"]
[ext_resource type="AudioStream" uid="uid://c2jhvinbj5ynt" path="res://Assets/Sound Design/SFX/LowHealth SFX.wav" id="5_fkybt"]
[ext_resource type="PackedScene" uid="uid://bilmsn6dwb60u" path="res://Scenes/UI Scenes/blackheart.tscn" id="5_x3wgy"]
[ext_resource type="PackedScene" uid="uid://celwye8ea4pb7" path="res://Scenes/UI Scenes/blueheart.tscn" id="6_52ee3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 0, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 640, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 1280, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 1920, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 2560, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 3200, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 3200, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 3200, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 3200, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 3200, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 3840, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 3840, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("2_52ee3")
region = Rect2(1280, 3840, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("2_52ee3")
region = Rect2(1920, 3840, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("2_52ee3")
region = Rect2(2560, 3840, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("2_52ee3")
region = Rect2(0, 4480, 640, 640)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("2_52ee3")
region = Rect2(640, 4480, 640, 640)

[sub_resource type="SpriteFrames" id="SpriteFrames_nn08x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6y60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmcrb")
}],
"loop": true,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 13.0
height = 50.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 14.000001)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_nn08x")
autoplay = "default"
frame_progress = 0.09729227
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(4, -4)
shape = SubResource("CapsuleShape2D_vgqql")

[node name="Muzzle" type="Marker2D" parent="." groups=["player"]]
position = Vector2(5, -45)

[node name="TakeDamage" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_6t5aa")
volume_db = 5.0

[node name="health_bar" type="CanvasLayer" parent="."]
offset = Vector2(0, 35)
transform = Transform2D(1, 0, 0, 1, 0, 35)

[node name="RedHearts" type="VBoxContainer" parent="health_bar"]
offset_left = 477.5
offset_top = 65.0
offset_right = 535.5
offset_bottom = 220.0
size_flags_horizontal = 6

[node name="heart" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart" instance=ExtResource("4_vgqql")]
position = Vector2(30, 25)

[node name="heart2" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart2" instance=ExtResource("4_vgqql")]
position = Vector2(30, 16)

[node name="heart3" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart3" instance=ExtResource("4_vgqql")]
position = Vector2(30, 7)

[node name="heart4" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart4" instance=ExtResource("4_vgqql")]
position = Vector2(30, -2)

[node name="heart5" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart5" instance=ExtResource("4_vgqql")]
position = Vector2(30, -11)

[node name="heart6" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart6" instance=ExtResource("4_vgqql")]
position = Vector2(30, -20)

[node name="heart7" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart7" instance=ExtResource("4_vgqql")]
position = Vector2(30, -29)

[node name="heart8" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart8" instance=ExtResource("4_vgqql")]
position = Vector2(30, -38)

[node name="heart9" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart9" instance=ExtResource("4_vgqql")]
position = Vector2(30, -47)

[node name="heart10" type="TextureRect" parent="health_bar/RedHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Heart" parent="health_bar/RedHearts/heart10" instance=ExtResource("4_vgqql")]
position = Vector2(30, -56)

[node name="BlackHearts" type="VBoxContainer" parent="health_bar"]
offset_left = 477.5
offset_top = 65.0
offset_right = 535.5
offset_bottom = 220.0
size_flags_horizontal = 6

[node name="heart" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart" instance=ExtResource("5_x3wgy")]
position = Vector2(30, 25)
scale = Vector2(0.13, 0.13)

[node name="heart2" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart2" instance=ExtResource("5_x3wgy")]
position = Vector2(30, 16)
scale = Vector2(0.13, 0.13)

[node name="heart3" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart3" instance=ExtResource("5_x3wgy")]
position = Vector2(30, 7)
scale = Vector2(0.13, 0.13)

[node name="heart4" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart4" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -2)
scale = Vector2(0.13, 0.13)

[node name="heart5" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart5" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -11)
scale = Vector2(0.13, 0.13)

[node name="heart6" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart6" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -20)
scale = Vector2(0.13, 0.13)

[node name="heart7" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart7" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -29)
scale = Vector2(0.13, 0.13)

[node name="heart8" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart8" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -38)
scale = Vector2(0.13, 0.13)

[node name="heart9" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart9" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -47)
scale = Vector2(0.13, 0.13)

[node name="heart10" type="TextureRect" parent="health_bar/BlackHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="Black Heart" parent="health_bar/BlackHearts/heart10" instance=ExtResource("5_x3wgy")]
position = Vector2(30, -56)
scale = Vector2(0.13, 0.13)

[node name="BlueHearts" type="VBoxContainer" parent="health_bar"]
offset_left = 477.5
offset_top = 65.0
offset_right = 535.5
offset_bottom = 591.0

[node name="Heart" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart" instance=ExtResource("6_52ee3")]
position = Vector2(30, 25)
scale = Vector2(0.13, 0.13)

[node name="Heart2" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart2" instance=ExtResource("6_52ee3")]
position = Vector2(30, 16)
scale = Vector2(0.13, 0.13)

[node name="Heart3" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart3" instance=ExtResource("6_52ee3")]
position = Vector2(30, 7)
scale = Vector2(0.13, 0.13)

[node name="Heart4" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart4" instance=ExtResource("6_52ee3")]
position = Vector2(30, -2)
scale = Vector2(0.13, 0.13)

[node name="Heart5" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart5" instance=ExtResource("6_52ee3")]
position = Vector2(30, -11)
scale = Vector2(0.13, 0.13)

[node name="Heart6" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart6" instance=ExtResource("6_52ee3")]
position = Vector2(30, -20)
scale = Vector2(0.13, 0.13)

[node name="Heart7" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart7" instance=ExtResource("6_52ee3")]
position = Vector2(30, -29)
scale = Vector2(0.13, 0.13)

[node name="Heart8" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart8" instance=ExtResource("6_52ee3")]
position = Vector2(30, -38)
scale = Vector2(0.13, 0.13)

[node name="Heart9" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart9" instance=ExtResource("6_52ee3")]
position = Vector2(30, -47)
scale = Vector2(0.13, 0.13)

[node name="Heart10" type="TextureRect" parent="health_bar/BlueHearts"]
custom_minimum_size = Vector2(58.775, 49.72)
layout_mode = 2

[node name="BlueHeart" parent="health_bar/BlueHearts/Heart10" instance=ExtResource("6_52ee3")]
position = Vector2(30, -56)
scale = Vector2(0.13, 0.13)

[node name="LowHealth" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fkybt")
volume_db = -5.0

[node name="MinionSpawnPoint" type="Marker2D" parent="."]
position = Vector2(380, 860)

[node name="TextAnchor" type="Marker2D" parent="."]
position = Vector2(3, -57)

[connection signal="hit" from="." to="." method="_on_hit"]
